# rocket_api

./: Cargo.toml  database.sqlite  database.sqlite-shm
migrations/2023-03-05-100043_create_rustaceans/: up.sql
src/: auth.rs  main.rs
src/models/: rustacean.rs
src/repositories/: rustacean.rs
src/routes/: rustaceans.rs
