[package]
edition = "2021"
name = "udemy_rocket"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20"
diesel = {version = "1.4", features = ["sqlite", "r2d2"]}
rocket = {version = "0.5.0-rc", features = ["json"]}
serde_json = "1.0"

[dependencies.rocket_sync_db_pools]
default-features = false
features = ["diesel_sqlite_pool"]
version = "0.1.0-rc"
